cloudformation/nodejs-bikes-api-components/SecurityGroups.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Security Groups for EC Nodejs API server and Rds Mysql
Parameters:
  EnvironmentName:
    Description: Environment name that is prefixed to resource names
    Type: String
    AllowedValues: [ami, dev, prod ] 

Resources:
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to client host
      VpcId: 
        Fn::ImportValue:
          'Fn::Sub': 
            'TwoPubPrivVpcId-${EnvironmentName}'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 10.192.0.0/16

  RdsEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow nodejs security group
      VpcId: 
        Fn::ImportValue:
          'Fn::Sub': 
            'TwoPubPrivVpcId-${EnvironmentName}'
      SecurityGroupIngress:
        - IpProtocol: tcp
          SourceSecurityGroupId: !Ref InstanceSecurityGroup
          FromPort: 3306
          ToPort: 3306

Outputs:
  EC2SecurityGroup:
    Description: Security for Inbound Node Traffic
    Value: !Ref InstanceSecurityGroup
    Export:
      Name:
        'Fn::Sub': 
          'Ec2InstanceSecurityGroupExport-${EnvironmentName}'

  RdsSecurityGroup:
    Description: RDS security group only access from Nodejs SG
    Value: !Ref  RdsEC2SecurityGroup
    Export:
      Name:
        'Fn::Sub': 
          'RDSSecurityGroupExport-${EnvironmentName}'
